--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.exe filter=lfs diff=lfs merge=lfs -text
+out/base64LBOZO filter=lfs diff=lfs merge=lfs -text
+out/base64DROPPER filter=lfs diff=lfs merge=lfs -text
