--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.exe filter=lfs diff=lfs merge=lfs -text
 out/base64LBOZO filter=lfs diff=lfs merge=lfs -text
-out/base64DROPPER filter=lfs diff=lfs merge=lfs -text
+out/base64DROPNRUNNER filter=lfs diff=lfs merge=lfs -text
+out/base64LBOZODecryptor filter=lfs diff=lfs merge=lfs -text
